--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 calibration.mat
 djPrefs.m
+djPrefs.m
 windows/zeroMQwrapper.mexw64
-RecordingPath.txt
+windows/zeroMQwrapper.mexw64
+windows/zeroMQwrapper.mexw64
+windows/zeroMQwrapper.mexw64
