--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
+.gitignore
 calibration.mat
 djPrefs.m
 windows/zeroMQwrapper.mexw64
 *.ps
 *.asv
 *.DS_Store
-Data/Emily/2017-07-19_09-43-22_mouse-7748/09-34-22
-Data/Emily/2017-07-19_09-27-08_mouse-7748/09-27-08
+
 .DS_Store
 *.bak
