--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 calibration.mat
 djPrefs.m
 djPrefs.m
+*.mexw64
 zeroMQwrapper.mexw64
 windows/zeroMQwrapper.mexw64
 *.ps
@@ -8,3 +9,4 @@ windows/zeroMQwrapper.mexw64
 Data/Emily/2017-07-19_09-43-22_mouse-7748/09-34-22
 Data/Emily/2017-07-19_09-27-08_mouse-7748/09-27-08
 .DS_Store
+zeroMQwrapper.mexw64
